// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connector details step render for GIT connector 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
  >
    <div
      class="heading"
    >
      GIT Connector Details
    </div>
    <div>
      <div
        class="OverlaySpinner---overlaySpinner--3Bs3"
      >
        <form
          class="FormikForm---main--1N87"
        >
          <div>
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm"
            >
              <div
                class="connectorFormNameWrapper"
              >
                <div
                  class="connectorFormNameElm"
                >
                  <div
                    class="InputWithIdentifier---txtNameContainer--20iZ"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                    >
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="InputWithIdentifier---idInput--w8_T"
                        contenteditable="true"
                      />
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---margin-small--1ZqR StyledProps---padding-left-large--28UT StyledProps---padding-top-small--1-XA"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                  >
                    + Description
                  </p>
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                  >
                    + Tags
                  </p>
                </div>
              </div>
              <div
                class="connectorFormElm"
              />
              <div
                class="connectorFormElm"
              />
            </div>
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws saveBtn"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Save And Continue
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector details step render for create kubernetes connector step one 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
  >
    <div
      class="heading"
    >
      Kubernetes Cluster Overview
    </div>
    <div>
      <div
        class="OverlaySpinner---overlaySpinner--3Bs3"
      >
        <form
          class="FormikForm---main--1N87"
        >
          <div>
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm"
            >
              <div
                class="connectorFormNameWrapper"
              >
                <div
                  class="connectorFormNameElm"
                >
                  <div
                    class="InputWithIdentifier---txtNameContainer--20iZ"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                    >
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="InputWithIdentifier---idInput--w8_T"
                        contenteditable="true"
                      />
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---margin-small--1ZqR StyledProps---padding-left-large--28UT StyledProps---padding-top-small--1-XA"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                  >
                    + Description
                  </p>
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                  >
                    + Tags
                  </p>
                </div>
              </div>
              <div
                class="connectorFormElm"
              />
              <div
                class="connectorFormElm"
              />
            </div>
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws saveBtn"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Save And Continue
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector details step render for create kubernetes connector step one 2`] = `
<div>
  <div
    class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
  >
    <div
      class="heading"
    >
      Kubernetes Cluster Overview
    </div>
    <div>
      <div
        class="OverlaySpinner---overlaySpinner--3Bs3"
      >
        <form
          class="FormikForm---main--1N87"
        >
          <div>
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm"
            >
              <div
                class="connectorFormNameWrapper"
              >
                <div
                  class="connectorFormNameElm"
                >
                  <div
                    class="InputWithIdentifier---txtNameContainer--20iZ"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                    >
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="InputWithIdentifier---idInput--w8_T"
                        contenteditable="true"
                      />
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---margin-small--1ZqR StyledProps---padding-left-large--28UT StyledProps---padding-top-small--1-XA"
                />
              </div>
              <div
                class="connectorFormElm"
              >
                <div
                  class="StyledProps---font--2ipy StyledProps---main--1Wws headerRow"
                >
                  <span
                    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
                  >
                    Description
                  </span>
                  <span
                    class="StyledProps---font--2ipy StyledProps---main--1Wws link StyledProps---inline--1f52"
                  >
                    remove
                  </span>
                </div>
                <div
                  class="bp3-form-group description"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <textarea
                      autocomplete="off"
                      class="bp3-input bp3-fill"
                      name="description"
                    >
                      dummy description
                    </textarea>
                  </div>
                </div>
              </div>
              <div
                class="connectorFormElm"
              >
                <div
                  class="StyledProps---font--2ipy StyledProps---main--1Wws headerRow"
                >
                  <span
                    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
                  >
                    Tags
                  </span>
                  <span
                    class="StyledProps---font--2ipy StyledProps---main--1Wws link StyledProps---inline--1f52"
                  >
                    remove
                  </span>
                </div>
                <div
                  class="bp3-form-group tags"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper TagInput---tagInput--1eAz bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-fill bp3-multi-select TagInput---input--2yQS"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <span
                                class="bp3-tag bp3-minimal TagInput---tag--2ZBU TagInput---addTagButton--1ENX"
                                data-tag-index="0"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  + tag
                                </span>
                                <button
                                  class="bp3-tag-remove"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-small-cross"
                                    icon="small-cross"
                                  >
                                    <svg
                                      data-icon="small-cross"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                    >
                                      <desc>
                                        small-cross
                                      </desc>
                                      <path
                                        d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                              <input
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws saveBtn"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Save And Continue
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
